--- a/midwest/index.html
+++ b/midwest/index.html
@@ -188,52 +188,61 @@
 		<div class="card-container">
 			<div class="card-content">
 				<img src="/midwest/images/attachment(6) 1.webp" alt="card image" class="card-image">
-
+				<div class="card-describe">
 				<h4 class="card-title">Tool</h4>
 				<p class="card-description">Precision-crafted tool rolls, pouches, and soft cases built for daily wear
 					and tear.</p>
-				<a href="contact.html" class="btn btn-primary">Learn More ➜</a>
+				<a href="contact.html" class="primary-btn">Learn More ➜</a>
+				</div>
 			</div>
 
 			<div class="card-content">
 				<img src="/midwest/images/attachment 2.webp" alt="card image" class="card-image">
-
+				<div class="card-describe">
 				<h4 class="card-title">Defense & Military</h4>
 				<p class="card-description">Berry Amendment–compliant solutions with secure, rugged textile
 					applications.</p>
-				<a href="contact.html" class="btn btn-primary">Learn More ➜</a>
+				<a href="contact.html" class="primary-btn">Learn More ➜</a>
+				</div>
 			</div>
 
 			<div class="card-content">
 				<img src="/midwest/images/attachment 3.webp" alt="card image" class="card-image">
-
+				<div class="card-describe">
 				<h4 class="card-title">EMS & Medical</h4>
 				<p class="card-description">Sterile-grade sewing, foam cutting, and packaging for critical care
 					products.</p>
-				<a href="contact.html" class="btn btn-primary">Learn More ➜</a>
+				<a href="contact.html" class="primary-btn">Learn More ➜</a>
+				</div>
 			</div>
 			<div class="card-content">
 				<img src="/midwest/images/attachment4 .webp" alt="card image" class="card-image">
 
+				<div class="card-describe">
 				<h4 class="card-title">Outdoor & Sport</h4>
 				<p class="card-description">Weatherproof, high-durability textile components for tents, tarps, and
 					shelters.</p>
-				<a href="contact.html" class="btn btn-primary">Learn More ➜</a>
+				<a href="contact.html" class="primary-btn">Learn More ➜</a>
+				</div>
 			</div>
 			<div class="card-content">
 				<img src="/midwest/images/attachment 5.webp" alt="card image" class="card-image">
 
+				<div class="card-describe">
 				<h4 class="card-title">Industrial & OEM</h4>
 				<p class="card-description">Custom upholstery, seat covers, acoustic padding, and OEM parts delivered at
 					scale.</p>
-				<a href="contact.html" class="btn btn-primary">Learn More ➜</a>
+				<a href="contact.html" class="primary-btn">Learn More ➜</a>
+				</div>
 			</div>
 			<div class="card-content">
 				<img src="/midwest/images/attachment 6.webp" alt="card image" class="card-image">
 
+				<div class="card-describe">
 				<h4 class="card-title">Promotional & Demo</h4>
 				<p class="card-description">Branded covers, foam displays, bags, and textile marketing assets.</p>
-				<a href="contact.html" class="btn btn-primary">Learn More ➜</a>
+				<a href="contact.html" class="primary-btn">Learn More ➜</a>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -287,27 +296,27 @@
 						<ul>
 							<li class="oem-lst">
 								<img src="/midwest/images/arrow.svg" alt="check icon" class="check-icon">
-								Custom sewing & assembly
+								Development and Engineering
 							</li>
 							<li class="oem-lst">
 								<img src="/midwest/images/arrow.svg" alt="check icon" class="check-icon">
-								Fabric cutting & fabrication
+								Prototype Development
 							</li>
 							<li class="oem-lst">
 								<img src="/midwest/images/arrow.svg" alt="check icon" class="check-icon">
-								Foam cutting & laminating
+								Contract Custom Soft Sewing
 							</li>
 							<li class="oem-lst">
 								<img src="/midwest/images/arrow.svg" alt="check icon" class="check-icon">
-								Production-ready prototyping
+								Custom Upholstery and Covers
 							</li>
 							<li class="oem-lst">
 								<img src="/midwest/images/arrow.svg" alt="check icon" class="check-icon">
-								Quality assurance & compliance
+								Warehouse / Inventory Management / Logistics
 							</li>
 							<li class="oem-lst">
 								<img src="/midwest/images/arrow.svg" alt="check icon" class="check-icon">
-								Packaging & fulfillment
+								Integration with Various Materials & Kitting
 							</li>
 						</ul>
 					</div>
@@ -421,7 +430,7 @@
 				<h4 class="quote-para">Turn your design into reality. Get your quote today—most are delivered within 48
 					hours..</h4>
 			</div>
-			
+
 			<div class="quote-note">
 				<a href="contact.html" class="quote-button">Get a Quote
 					<span class="arrow-span">
@@ -553,7 +562,7 @@
 								<a href="about.html" class="footer-itm"> (920) 434-2523</a>
 						</ul>
 						<div class="footer-icons">
-							<ul class="footer-lin">
+							<ul class="footer-lnk">
 								<li class="footer-li">
 									<a href="https://www.starkedge.com/">
 									<svg xmlns="http://www.w3.org/2000/svg" width="18" height="17" viewBox="0 0 18 17"
